--- a/src/views/Home/containers/Result/styles.module.scss
+++ b/src/views/Home/containers/Result/styles.module.scss
@@ -1,13 +1,12 @@
 .container{
-    margin: 1% 8% 8% 8%;
     display: grid;
-    grid-template-columns: repeat(4, 2fr);
+    grid-template-columns: repeat(4, 3fr);
 
     @media only screen and (max-width: 1000px) {
         grid-template-columns: repeat(2, 3fr);
     }
 
     @media only screen and (max-width: 700px) {
-        grid-template-columns: 3fr;
+        grid-template-columns: 4fr;
     }
 }
